[modify] SplitView が邪魔なので一旦どける

--- a/Geopelia/Views/MainPage.xaml
+++ b/Geopelia/Views/MainPage.xaml
@@ -193,7 +193,7 @@
         <ProgressBar VerticalAlignment="Top"
                      IsEnabled="True"
                      IsIndeterminate="True" />
-        <SplitView IsPaneOpen="True"
+        <SplitView IsPaneOpen="False"
                    PaneBackground="#FF2B2B2B"
                    OpenPaneLength="180"
                    DisplayMode="Overlay">
