[add] 認証情報の削除処理を実装

--- a/Geopelia/Views/SettingPage.xaml
+++ b/Geopelia/Views/SettingPage.xaml
@@ -78,7 +78,8 @@
             </ListViewItem>
             <ListViewItem>
                 <Button Content="All reset"
-                        Margin="10, 0, 0, 0" />
+                        Margin="10, 0, 0, 0"
+                        Tapped="{x:Bind ViewModel.ResetSetting}" />
             </ListViewItem>
         </ListView>
     </Grid>
