--- a/Geopelia/App.xaml
+++ b/Geopelia/App.xaml
@@ -3,5 +3,4 @@
                              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                              xmlns:local="using:Geopelia"
                              xmlns:prism="using:Prism.Unity.Windows"
-                             RequestedTheme="Dark">
-</prism:PrismUnityApplication>
+                             RequestedTheme="Dark" />
