--- a/Geopelia/Views/MainPage.xaml
+++ b/Geopelia/Views/MainPage.xaml
@@ -1,7 +1,6 @@
 ﻿<Page x:Class="Geopelia.Views.MainPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:local="using:Geopelia"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:mvvm="using:Prism.Windows.Mvvm"
@@ -10,7 +9,8 @@
       mvvm:ViewModelLocator.AutoWireViewModel="True"
       mc:Ignorable="d"
       FontFamily="Meiryo"
-      NavigationCacheMode="Required">
+      NavigationCacheMode="Required"
+      Background="{ThemeResource SystemControlBackgroundAccentBrush}">
     <Page.Resources>
         <DataTemplate x:Key="TweetItemTemplate"
                       x:DataType="viewModels:TweetItemViewModel">
@@ -43,10 +43,11 @@
                         Margin="12, 0, 0, 0"
                         CornerRadius="3"
                         BorderThickness="1"
-                        BorderBrush="White">
+                        BorderBrush="White"
+                        Tapped="{x:Bind NavigateUserPage}">
                     <Border.Background>
                         <ImageBrush Stretch="None"
-                                    ImageSource="{x:Bind TweetModel.Value.TweetStatus.User.ProfileImageUrlHttps}" />
+                                    ImageSource="{x:Bind TweetModel.Value.ProfileImageUrlHttps}" />
                     </Border.Background>
                     <Ellipse Visibility="{x:Bind ProtectedVisibility.Value, Mode=OneTime}"
                              HorizontalAlignment="Right"
@@ -54,7 +55,6 @@
                              Fill="White" />
                 </Border>
                 <TextBlock Grid.Column="2"
-                           Grid.ColumnSpan="2"
                            VerticalAlignment="Top"
                            Margin="10, 0, 0, 0"
                            TextTrimming="CharacterEllipsis"
@@ -74,7 +74,9 @@
                                           HorizontalAlignment="Left"
                                           VerticalAlignment="Top"
                                           Margin="10, 10, 0, 0"
-                                          TwitterResponse="{x:Bind TweetModel.Value}" />
+                                          TwitterResponse="{x:Bind TweetModel.Value}"
+                                          Tapped="{x:Bind NavigateTweetDetailsPage}">
+                </fragments:TweetTextBlock>
                 <Grid Grid.Row="2"
                       Grid.Column="2"
                       Grid.ColumnSpan="2"
@@ -145,8 +147,8 @@
                     <Button Background="Transparent"
                             HorizontalAlignment="Center"
                             Tapped="{x:Bind NavigateTweetCreatePage}">
-                        <SymbolIcon Symbol="Back"
-                                    Foreground="Gray" />
+                        <FontIcon Glyph="&#xE248;"
+                                  Foreground="Gray" />
                     </Button>
                     <Button Grid.Column="1"
                             Background="Transparent"
@@ -165,8 +167,8 @@
                             Background="Transparent"
                             HorizontalAlignment="Center"
                             Tapped="{x:Bind ChangeIsFavorited}">
-                        <SymbolIcon Symbol="Favorite"
-                                    Foreground="{x:Bind FavoriteForground.Value, Mode=OneWay}" />
+                        <FontIcon Glyph="&#xE006;"
+                                  Foreground="{x:Bind FavoriteForground.Value, Mode=OneWay}" />
                     </Button>
                     <Button Grid.Column="3"
                             Background="Transparent"
@@ -184,11 +186,19 @@
             </Grid>
         </DataTemplate>
     </Page.Resources>
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <Grid Background="{ThemeResource SystemControlBackgroundAccentBrush}">
         <ProgressBar VerticalAlignment="Top"
                      IsEnabled="True"
                      IsIndeterminate="True" />
         <Pivot>
+            <Pivot.LeftHeader>
+                <ToggleButton Height="50"
+                              Width="55">
+                    <ToggleButton.Content>
+                        <FontIcon Glyph="&#xE700;" />
+                    </ToggleButton.Content>
+                </ToggleButton>
+            </Pivot.LeftHeader>
             <PivotItem Margin="0">
                 <PivotItem.Header>
                     <TextBlock Text="Home"
@@ -199,7 +209,8 @@
                           VerticalAlignment="Top"
                           ItemsSource="{x:Bind ViewModel.TweetItems}"
                           ItemTemplate="{StaticResource TweetItemTemplate}"
-                          SelectionMode="None">
+                          SelectionMode="None"
+                          Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
                     <ListView.ItemContainerStyle>
                         <Style TargetType="ListViewItem">
                             <Setter Property="HorizontalContentAlignment"
@@ -217,7 +228,8 @@
                 <ListView VerticalAlignment="Top"
                           ItemsSource="{x:Bind ViewModel.MentionItems}"
                           ItemTemplate="{StaticResource TweetItemTemplate}"
-                          SelectionMode="None">
+                          SelectionMode="None"
+                          Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
                     <ListView.ItemContainerStyle>
                         <Style TargetType="ListViewItem">
                             <Setter Property="HorizontalContentAlignment"
@@ -232,10 +244,7 @@
                 <PivotItem.Header>
                     <TextBlock Text="Profile" />
                 </PivotItem.Header>
-                <Grid>
-                    <Grid.ColumnDefinitions>
-
-                    </Grid.ColumnDefinitions>
+                <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="250" />
                         <RowDefinition Height="*" />
@@ -243,7 +252,6 @@
                     <Grid>
                         <Grid.Background>
                             <ImageBrush ImageSource="{x:Bind ViewModel.MyProfile.Value.ProfileBannerUrl}" />
-                            <!--<SolidColorBrush Color="DarkSlateBlue" />-->
                         </Grid.Background>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="2*" />
@@ -305,6 +313,23 @@
                 </Grid>
             </PivotItem>
         </Pivot>
+        <SplitView IsPaneOpen="false"
+                   DisplayMode="Overlay"
+                   PaneBackground="Gray"
+                   PanePlacement="Left"
+                   OpenPaneLength="200">
+            <SplitView.Pane>
+                <StackPanel>
+
+                    <HyperlinkButton Content="TomoyaShibata"
+                                     Foreground="White"></HyperlinkButton>
+                    <HyperlinkButton Content="SubAccount"
+                                     Foreground="White"></HyperlinkButton>
+                    <FontIcon Glyph="&#xE700;" />
+                    <TextBlock Text="Add account" />
+                </StackPanel>
+            </SplitView.Pane>
+        </SplitView>
     </Grid>
     <Page.BottomAppBar>
         <CommandBar ClosedDisplayMode="Compact">
