--- a/Geopelia/Views/TweetDetailsPage.xaml
+++ b/Geopelia/Views/TweetDetailsPage.xaml
@@ -45,30 +45,33 @@
                     BorderThickness="1"
                     BorderBrush="White">
                 <Border.Background>
-                    <ImageBrush Stretch="None" />
+                    <ImageBrush Stretch="None"
+                                ImageSource="{x:Bind ViewModel.TweetModel.Value.ProfileImageUrlHttps}" />
                 </Border.Background>
                 <Ellipse HorizontalAlignment="Right"
                          Margin="0, -20, -9, 0"
                          Fill="White" />
             </Border>
             <TextBlock Grid.Column="1"
-                       Text="" />
+                       Text="{x:Bind ViewModel.TweetModel.Value.TweetStatus.User.Name}" />
             <TextBlock Grid.Row="1"
                        Grid.Column="1"
-                       Text=""
+                       Text="{x:Bind ViewModel.TweetModel.Value.TweetStatus.User.ScreenName}"
                        FontSize="13"
                        Foreground="DarkGray" />
             <TextBlock Grid.Row="2"
                        Grid.Column="1"
                        TextWrapping="WrapWholeWords"
-                       Margin="0, 10" />
+                       Margin="0, 10"
+                       Text="{x:Bind ViewModel.TweetModel.Value.TweetStatus.Text}" />
             <TextBlock Grid.Row="3"
                        Grid.Column="1"
                        HorizontalAlignment="Right"
-                       Text="2016/05/17 12:18:00" />
+                       Text="{x:Bind ViewModel.TweetModel.Value.CreatedAt}" />
             <TextBlock Grid.Row="4"
                        Grid.Column="1"
-                       HorizontalAlignment="Right" />
+                       HorizontalAlignment="Right"
+                       Text="{x:Bind ViewModel.TweetModel.Value.ClientName}" />
         </Grid>
     </StackPanel>
     <Page.BottomAppBar>
