--- a/Geopelia/Views/TweetDetailsPage.xaml
+++ b/Geopelia/Views/TweetDetailsPage.xaml
@@ -4,6 +4,8 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:mvvm="using:Prism.Windows.Mvvm"
+      xmlns:fragments="using:Geopelia.Views.Fragments"
+      xmlns:userControls="using:Geopelia.Views.UserControls"
       mvvm:ViewModelLocator.AutoWireViewModel="True"
       mc:Ignorable="d"
       FontFamily="Meiryo"
@@ -43,7 +45,8 @@
                     Margin="0, 0, 15, 0"
                     CornerRadius="3"
                     BorderThickness="1"
-                    BorderBrush="White">
+                    BorderBrush="White"
+                    Tapped="{x:Bind ViewModel.NavigateUserPage}">
                 <Border.Background>
                     <ImageBrush Stretch="None"
                                 ImageSource="{x:Bind ViewModel.TweetModel.Value.ProfileImageUrlHttps}" />
@@ -59,11 +62,10 @@
                        Text="{x:Bind ViewModel.TweetModel.Value.TweetStatus.User.ScreenName}"
                        FontSize="13"
                        Foreground="DarkGray" />
-            <TextBlock Grid.Row="2"
-                       Grid.Column="1"
-                       TextWrapping="WrapWholeWords"
-                       Margin="0, 10"
-                       Text="{x:Bind ViewModel.TweetModel.Value.TweetStatus.Text}" />
+            <fragments:TweetTextBlock Grid.Row="2"
+                                      Grid.Column="1"
+                                      Margin="0, 10"
+                                      TwitterResponse="{x:Bind ViewModel.TweetModel.Value}" />
             <TextBlock Grid.Row="3"
                        Grid.Column="1"
                        HorizontalAlignment="Right"
@@ -72,6 +74,53 @@
                        Grid.Column="1"
                        HorizontalAlignment="Right"
                        Text="{x:Bind ViewModel.TweetModel.Value.ClientName}" />
+        </Grid>
+        <StackPanel Margin="10"
+                    Visibility="{x:Bind ViewModel.IsImages1Page.Value}">
+            <Image Source="{x:Bind ViewModel.TweetModel.Value.PicTwitterUris[0]}"
+                   Height="200"
+                   Stretch="UniformToFill" />
+        </StackPanel>
+        <Grid Margin="10"
+              Visibility="{x:Bind ViewModel.IsImages2Page.Value}">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition Width="10" />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+            <Image Source="{x:Bind ViewModel.TweetModel.Value.PicTwitterUris[0]}"
+                   Height="200"
+                   Stretch="UniformToFill" />
+            <Image Grid.Column="2"
+                   Source="{x:Bind ViewModel.TweetModel.Value.PicTwitterUris[1]}"
+                   Height="200"
+                   Stretch="UniformToFill" />
+        </Grid>
+        <Grid Margin="10"
+              Visibility="{x:Bind ViewModel.IsImages3Page.Value}">
+            <Grid.RowDefinitions>
+                <RowDefinition />
+                <RowDefinition Height="10" />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition Width="10" />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+            <Image Grid.RowSpan="3"
+                   Source="{x:Bind ViewModel.TweetModel.Value.PicTwitterUris[0]}"
+                   Height="200"
+                   Stretch="UniformToFill" />
+            <Image Grid.Column="2"
+                   Source="{x:Bind ViewModel.TweetModel.Value.PicTwitterUris[1]}"
+                   Height="95"
+                   Stretch="UniformToFill" />
+            <Image Grid.Row="2"
+                   Grid.Column="2"
+                   Source="{x:Bind ViewModel.TweetModel.Value.PicTwitterUris[2]}"
+                   Height="95"
+                   Stretch="UniformToFill" />
         </Grid>
     </StackPanel>
     <Page.BottomAppBar>
